# app/artist.go
@@ -8,6 +8,12 @@ import (
 	"github.com/klahnen/spotifyService/models"
 )
 
+// GetArtist ... Get an artist by name
+// @Summary Get an artist
+// @Param name path string true "Name"
+// @Success 200 {object} models.Artist
+// @Failure 404 {object} object
+// @Router /artist/{name} [get]
 func (a *App) GetArtist() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
