# app/create_isrc.go
@@ -9,6 +9,11 @@ import (
 	"github.com/klahnen/spotifyService/spotify"
 )
 
+// CreateISRC ... Creates an ISRC
+// @Summary From an ISRC executes a search in Spotify to pull data from artists and tracks
+// @Param name body object true "ISRC"
+// @Success 200 {object} models.CreateISRCRequest
+// @Router /isrc [post]
 func (a *App) CreateISRC() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var createRequest models.CreateISRCRequest
