# app/tracks.go
@@ -24,6 +24,10 @@ func (a *App) GetTrackByISRC() http.HandlerFunc {
 	}
 }
 
+// GetTracks ... List all tracks
+// @Summary List of all tracks
+// @Success 200 {array} models.Track
+// @Router /tracks [get]
 func (a *App) GetTracks() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		tracks := []models.Track{}
